[project]
name = "gcp-utils"
version = "0.1.0"
description = "Comprehensive Google Cloud Platform utilities module for Python backend applications"
readme = "README.md"
authors = [
    { name = "dillon-tucker", email = "dillonptucker@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "gcp",
    "google-cloud",
    "google-cloud-platform",
    "cloud-storage",
    "firestore",
    "firebase",
    "cloud-run",
    "cloud-tasks",
    "cloud-functions",
    "cloud-scheduler",
    "bigquery",
    "cloud-build",
    "workflows",
    "pubsub",
    "secret-manager",
    "iam",
    "artifact-registry",
    "utilities",
    "backend",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    # Core dependencies - always required
    "google-auth>=2.35.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/dillon-tucker/gcp-utils"
Documentation = "https://github.com/dillon-tucker/gcp-utils#readme"
Repository = "https://github.com/dillon-tucker/gcp-utils"
Issues = "https://github.com/dillon-tucker/gcp-utils/issues"
Changelog = "https://github.com/dillon-tucker/gcp-utils/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Individual GCP services
storage = [
    "google-cloud-storage>=3.5.0",
    "aiofiles>=24.1.0",
]
firestore = [
    "google-cloud-firestore>=2.21.0",
]
bigquery = [
    "google-cloud-bigquery>=3.38.0",
]
artifact-registry = [
    "google-cloud-artifact-registry>=1.16.0",
]
cloud-run = [
    "google-cloud-run>=0.12.0",
]
cloud-tasks = [
    "google-cloud-tasks>=2.20.0",
]
cloud-functions = [
    "google-cloud-functions>=1.21.0",
]
cloud-scheduler = [
    "google-cloud-scheduler>=2.16.0",
]
cloud-build = [
    "google-cloud-build>=3.31.0",
]
workflows = [
    "google-cloud-workflows>=1.18.0",
]
pubsub = [
    "google-cloud-pubsub>=2.33.0",
]
secret-manager = [
    "google-cloud-secret-manager>=2.25.0",
]
iam = [
    "google-cloud-iam>=2.19.0",
]
logging = [
    "google-cloud-logging>=3.12.0",
]
firebase = [
    "firebase-admin>=7.1.0",
    "httpx>=0.27.2",
]

# Common combinations
firebase-auth = [
    "firebase-admin>=7.1.0",
]
firebase-hosting = [
    "firebase-admin>=7.1.0",
    "httpx>=0.27.2",
]

# Install all GCP services
all = [
    "google-cloud-storage>=3.5.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-artifact-registry>=1.16.0",
    "google-cloud-run>=0.12.0",
    "google-cloud-tasks>=2.20.0",
    "google-cloud-functions>=1.21.0",
    "google-cloud-scheduler>=2.16.0",
    "google-cloud-build>=3.31.0",
    "google-cloud-workflows>=1.18.0",
    "google-cloud-pubsub>=2.33.0",
    "google-cloud-secret-manager>=2.25.0",
    "google-cloud-iam>=2.19.0",
    "google-cloud-logging>=3.12.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.27.2",
    "aiofiles>=24.1.0",
]

# Development dependencies
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.7.4",
    "types-aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "firebase_admin.*",
    "httpx",
    "aiofiles",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    # "I",   # isort - disabled in favor of standalone isort tool
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise ... from err - intentional exception wrapping
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
